# udp2p_me

./: .gitignore  Cargo.toml  README.md  command.sh
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-file/: Cargo.toml
crates/libs/lib-file/src/: lib.rs
crates/libs/lib-network/: Cargo.toml
crates/libs/lib-network/src/: action.rs  congestion_handler.rs  handle_action.rs  handle_packet.rs  lib.rs  packet.rs  peer.rs  peer_data.rs  process.rs  resend.rs  sender_receiver.rs  store.rs  task_launcher_canceller.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: lib.rs
crates/services/cli/: Cargo.toml
crates/services/cli/src/: main.rs
crates/services/web-server/: Cargo.toml
crates/temp/: Cargo.toml
crates/temp/src/: main.rs
