[package]
name = "lib-network"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
lib-web = {path = "../../libs/lib-web"}
tokio = { version = "1.35.0", features = ["net", "macros", "rt", "rt-multi-thread"] }
nanorand = "0.7.0"
prelude = "0.2.1"
futures = "0.3.29"
sha2 = "0.10.8"
tokio-util = { version = "0.7.10", features = ["full"] }
