[package]
name = "cli"
version = "0.1.0"
edition = "2021"
about = "P2P data exchange using UDP and NAT traversal."
long_about = "Lonnnnnng about"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["cargo", "derive"] }
env_logger = "0.10.1"
lib-file = {path = "../../libs/lib-file"}
log = "0.4.20"

[lints]
workspace = true
