[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "udp2p"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["cargo", "derive"] }
env_logger = "0.10.1"
hex = "0.4.3"
lib-file = { version = "0.1.0", path = "../../libs/lib-file" }
lib-network = { version = "0.1.0", path = "../../libs/lib-network" }
lib-web = { version = "0.1.0", path = "../../libs/lib-web" }
log = "0.4.20"
owo-colors = "4.0.0"
tokio = { version = "1.35.1", features = ["macros"] }
tokio-util = "0.7.10"

[lints]
workspace = true
